# RabbitScribe

./: .gitignore  README.md  pyproject.toml  run.bat
rabbitscribe/: __main__.py  logging_setup.py  main_window.py  paths.py  settings.py
rabbitscribe/models/: chunks.py  project.py
rabbitscribe/resources/: style.qss
rabbitscribe/resources/presets/: dutch_fixes.json  semovote_14.json
rabbitscribe/widgets/: about_dialog.py  chunks_panel.py  cleanup_panel.py  log_view.py  progress_strip.py  setup_dialog.py  source_panel.py  transcribe_panel.py
rabbitscribe/workers/: _qprocess_worker.py  chunk_split.py  ffprobe.py  mp3_extract.py  setup_downloader.py  srt_cleaner.py  srt_split.py  srt_stream.py  transcribe.py  url_downloader.py
tests/: test_srt_cleaner.py  test_srt_split.py  test_srt_stream.py
